# midi-ble-rt

./: .gitignore  CMakeLists.txt  DEVELOPERS.md  LICENSE  README.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md  RELEASE_NOTES_v0.8.1.md  RELEASE_NOTES_v0.9.0.md  RELEASE_NOTES_v0.9.2.md  RELEASE_NOTES_v0.9.4.md  midi-ble-rt.spec
.github/workflows/: apply-gui-runtime-gate.yml  ci.yml  fix-gui-runtime-gate-declaration.yml
config/: daemon.ini.example  roland-gokeys.ini.example  standard-ble-midi.ini.example
config/devices.d/: roland-gokeys.ini.example  standard-ble-midi.ini.example
docs/: ALSA.md  ARCHITECTURE.md  BLE_MIDI_FRAGMENTATION.md  BLUEZ_PATCH_NOTES.md  CLI.md  CODE_CLEANUP_PLAN.md  CORE_EXTRACTION_STATUS.md  GENERIC_BLE_MIDI_DEVICE.md  GOKEYS_TESTS.md  GUI.md  LATENCY_TESTING.md  LEGACY_STATIC_AUDIT.md  MONITOR_AND_THREADS.md  MULTI_DEVICE_CONFIG.md  MULTI_SESSION_RUNTIME_TESTS.md  ROADMAP.md  ROLAND_GOKEYS.md  ROLAND_GOKEYS_RECOVERY.md  RUNTIME_CLEANUP_NOTES.md  SELINUX.md  SESSION_RESILIENCE.md  STATS.md  SYSTEMD_USER.md  TESTING.md  UI_FACADE.md  logging.md  session-state.md
docs/info/: midi-ble-rt.texi
docs/man/: midi-ble-rtctl.1  midi-ble-rtd.1
examples/midi/: test-note.mid
gui/: CMakeLists.txt
gui/facade/: mb-bluez-observer.c  mb-bluez-observer.h  mb-daemon-observer.c  mb-daemon-observer.h  mb-ui-facade.c  mb-ui-facade.h  mb-ui-model.c  mb-ui-model.h
gui/gnome/: mb-gnome-main.c  mb-gnome-window.c  mb-gnome-window.h
measurements/pre-rtkit/: summary-pre-rtkit.tsv
packaging/fedora/: make-srpm.sh  midi-ble-rt.spec  midi-ble-rtd.service
patches/: 0001-finish-bluez-lifecycle-monitor.patch
scripts/: build-gui-clean.sh  check-runtime-threads.sh  install-user-service.sh  selinux-diagnose.sh  test-alsa-loopback.sh  test-fluidsynth-smoke.sh
selinux/: README.md  bluez_midi_alsa.te.example
src/: mb-alsa-port.c  mb-alsa-port.h  mb-alsa.c  mb-alsa.h  mb-app.c  mb-app.h  mb-ble-midi.c  mb-ble-midi.h  mb-bluez-agent.c  mb-bluez-agent.h  mb-bluez.c  mb-bluez.h  mb-buffer.c  mb-buffer.h  mb-config-dir-alsa.c  mb-config-dir-alsa.h  mb-config.c  mb-config.h  mb-control-protocol.c  mb-control-protocol.h  mb-ctl-main.c  mb-daemon-main.c  mb-daemon.c  mb-device-discovery.c  mb-device-discovery.h  mb-duplex-runtime.c  mb-duplex-runtime.h  mb-frame-model.c  mb-frame-model.h  mb-gatt-midi.c  mb-gatt-midi.h  mb-latency-diagnostics.c  mb-latency-diagnostics.h  mb-legacy-core.h  mb-log.c  mb-log.h  mb-multi-runtime.h  mb-orchestrator.c  mb-orchestrator.h  mb-paths.c  (+19 more)
src/gui/: mb-gui-ctl-client.c  mb-gui-ctl-client.h  mb-gui-daemon-client.c  mb-gui-daemon-client.h  mb-gui-main.c  mb-gui-model.c  mb-gui-model.h  mb-gui-window.c  mb-gui-window.h
systemd/: midi-ble-rtd.service
systemd/user/: midi-ble-rtd.service.example  midi-ble-rtd.service.in
tests/: test-mb-alsa.c  test-mb-ble-midi.c  test-mb-buffer.c  test-mb-config.c  test-mb-control-protocol.c  test-mb-duplex-runtime.c  test-mb-frame-model.c  test-mb-paths.c  test-mb-runtime.c  test-mb-session-state.c  test-mb-session.c  test-mb-slice-ring.c
tools/: capture-latency.sh  compare-latency-summaries.py  summarize-latency.py
